--- a/app/companies-pfizer.html
+++ b/app/companies-pfizer.html
@@ -197,7 +197,93 @@
                 </p>
 
                 <section class="mentioned-drugs">
+                    <p class="mentioned-drugs__title">
+                        Drugs with <span class="mentioned-drugs__request">“clinamycin”</span>
+                    </p>
 
+                    <div class="section__content">
+                        <a href="./companies-pfizer.html" class="tile tile--small">
+                            <img src="./img/news/bayer.jpg" alt="bayer">
+                            <p class="tile__description line-1">
+                                Pfizer
+                            </p>
+                        </a>
+                        <a href="./news.html" class="tile tile--small">
+                            <img src="./img/news/pills.jpg" alt="bayer">
+                            <p class="tile__description line-1">
+                                Pills
+                            </p>
+                        </a>
+                        <a href="./news.html" class="tile tile--small">
+                            <img src="./img/news/220-2200280_canada-merck-connect-logo-merck-inventing-for-life.jpg" alt="bayer">
+                            <p class="tile__description line-1">
+                                Merck
+                            </p>
+                        </a>
+                    </div>
+                </section>
+
+                <section class="mentioned-drugs other-drugs">
+                    <p class="mentioned-drugs__title">
+                        Other drugs from this company
+                    </p>
+
+                    <div class="section__content">
+                        <a href="./companies-pfizer.html" class="tile tile--small">
+                            <img src="./img/news/color-1.svg" alt="bayer">
+                            <p class="tile__description line-1">
+                                Some Drug
+                            </p>
+                        </a>
+                        <a href="./news.html" class="tile tile--small">
+                            <img src="./img/news/color-2.svg" alt="bayer">
+                            <p class="tile__description line-1">
+                                More Drug
+                            </p>
+                        </a>
+                        <a href="./news.html" class="tile tile--small">
+                            <img src="./img/news/color-3.svg" alt="bayer">
+                            <p class="tile__description line-1">
+                                One more drug
+                            </p>
+                        </a>
+                        <a href="./companies-pfizer.html" class="tile tile--small">
+                            <img src="./img/news/color-4.svg" alt="bayer">
+                            <p class="tile__description line-1">
+                                Some Drug
+                            </p>
+                        </a>
+                        <a href="./news.html" class="tile tile--small">
+                            <img src="./img/news/color-5.svg" alt="bayer">
+                            <p class="tile__description line-1">
+                                More Drug
+                            </p>
+                        </a>
+                        <a href="./news.html" class="tile tile--small">
+                            <img src="./img/news/color-1.svg" alt="bayer">
+                            <p class="tile__description line-1">
+                                One more drug
+                            </p>
+                        </a>
+                        <a href="./companies-pfizer.html" class="tile tile--small">
+                            <img src="./img/news/color-2.svg" alt="bayer">
+                            <p class="tile__description line-1">
+                                Some Drug
+                            </p>
+                        </a>
+                        <a href="./news.html" class="tile tile--small">
+                            <img src="./img/news/color-3.svg" alt="bayer">
+                            <p class="tile__description line-1">
+                                More Drug
+                            </p>
+                        </a>
+                        <a href="./news.html" class="tile tile--small">
+                            <img src="./img/news/color-4.svg" alt="bayer">
+                            <p class="tile__description line-1">
+                                One more drug
+                            </p>
+                        </a>                                                
+                    </div>
                 </section>
             </div>
         </article>
@@ -243,7 +329,7 @@
                         </a>
                     </li>
                     <li class="recent-searches__list-item">
-                        <a href="#" class="recent-searches__link" data-search="Chantix">
+                        <a href="./drugs-chantix.html" class="recent-searches__link" data-search="Chantix">
                                 Chantix
                         </a>
                     </li>
