- added ajax for the companies and products list

--- a/app/news-article.html
+++ b/app/news-article.html
@@ -63,7 +63,7 @@
 
 </head>
 
-<body class="home-page">
+<body class="home-page" id="news">
     <!--[Structure] Header START -->
     <header>
         <aside class="navigation__sidebar">
@@ -196,7 +196,7 @@
                             Top news
                         </h2>
         
-                        <div class="section__content">
+                        <div class="section__content" id="news-bottom-container">
                             <a href="./news-article.html" class="tile tile--news">
                                 <img src="./img/news/doc.jpg" alt="bayer">
                                 <p class="tile__description line-1">
