--- a/app/companies.html
+++ b/app/companies.html
@@ -173,104 +173,25 @@
     <!--[Structure] Header END -->
 
     <!--[Structure] Main START -->
-    <main class="main-content main-content--home">
+    <main class="main-content main-content--home" id="companies-main">
         <section class="section--favorites">
             <h2 class="section__title">
                 Companies
             </h2>
 
-            <div class="section__content">
-                <a href="./companies-pfizer.html" class="tile tile--small">
+            <div class="section__content" id="companies-page-container">
+                <!-- <a href="./companies-pfizer.html" class="tile tile--small ">
                     <img src="./img/news/bayer.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Pfizer
                     </p>
                 </a>
-                <a href="./news-article.html" class="tile tile--small">
+                <a href="./news-article.html" class="tile tile--small ">
                     <img src="./img/news/pills.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Pills
                     </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/220-2200280_canada-merck-connect-logo-merck-inventing-for-life.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Merck
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/Rectangle 2.4.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Drops
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/chantix.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Chantix
-                    </p>
-                </a>
-                <a href="./companies-pfizer.html" class="tile tile--small">
-                    <img src="./img/news/color-1.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Pfizer
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/color-2.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Pills
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/color-3.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Merck
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/color-4.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Drops
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/color-5.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Chantix
-                    </p>
-                </a>
-                <a href="./companies-pfizer.html" class="tile tile--small">
-                    <img src="./img/news/bayer.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Pfizer
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/pills.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Pills
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/220-2200280_canada-merck-connect-logo-merck-inventing-for-life.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Merck
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/Rectangle 2.4.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Drops
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/chantix.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Chantix
-                    </p>
-                </a>         
-
+                </a> -->
             </div>
 
         </section>
@@ -281,37 +202,37 @@
             </h2>
 
             <div class="section__content">
-                <a href="./companies-pfizer.html" class="tile tile--small">
+                <a href="./companies-pfizer.html" class="tile tile--small ">
                     <img src="./img/news/bayer.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Pfizer
                     </p>
                 </a>
-                <a href="./news-article.html" class="tile tile--small">
+                <a href="./news-article.html" class="tile tile--small ">
                     <img src="./img/news/pills.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Pills
                     </p>
                 </a>
-                <a href="./news-article.html" class="tile tile--small">
+                <a href="./news-article.html" class="tile tile--small ">
                     <img src="./img/news/220-2200280_canada-merck-connect-logo-merck-inventing-for-life.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Merck
                     </p>
                 </a>
-                <a href="./news-article.html" class="tile tile--small">
+                <a href="./news-article.html" class="tile tile--small ">
                     <img src="./img/news/Rectangle 2.4.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Drops
                     </p>
                 </a>
-                <a href="./news-article.html" class="tile tile--small">
+                <a href="./news-article.html" class="tile tile--small ">
                     <img src="./img/news/chantix.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Chantix
                     </p>
                 </a>
-                <a href="./companies-pfizer.html" class="tile tile--small">
+                <a href="./companies-pfizer.html" class="tile tile--small ">
                     <img src="./img/news/color-1.svg" alt="bayer">
                     <p class="tile__description line-1">
                         Pfizer
