--- a/app/home.html
+++ b/app/home.html
@@ -173,26 +173,26 @@
     <!--[Structure] Header END -->
 
     <!--[Structure] Main START -->
-    <main class="main-content main-content--home">
+    <main class="main-content main-content--home" id="home-main">
         <section class="section--top-news">
             <h2 class="section__title">
                 Top news
             </h2>
 
             <div class="section__content" id="news-container-main">
-                <a href="./news-article.html" class="tile tile--news">
+                <a href="./news-article.html" class="tile tile--news js-news-link">
                     <img src="./img/news/bayer.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Bayer statement on Jury’s
                     </p>
                 </a>
-                <a href="./news-article.html" class="tile tile--news">
+                <a href="./news-article.html" class="tile tile--news js-news-link">
                     <img src="./img/news/doc.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Progress made on cancer
                     </p>
                 </a>
-                <a href="./companies-pfizer.html" class="tile tile--news">
+                <a href="./companies-pfizer.html" class="tile tile--news js-news-link">
                     <img src="./img/news/pfizer.jpg" alt="bayer">
                     <p class="tile__description line-1">
                             Title here with ellipsis if it Lorem ipsum dolor sit.
@@ -207,7 +207,7 @@
             </h2>
 
             <div class="section__content" id="fav-container-main">
-                <a href="./news-article.html" class="tile tile--small">
+                <!-- <a href="./news-article.html" class="tile tile--small">
                     <img src="./img/news/bayer.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Pfizer
@@ -236,67 +236,7 @@
                     <p class="tile__description line-1">
                         Chantix
                     </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/color-1.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Pfizer
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/color-2.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Pills
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/color-3.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Merck
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/color-4.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Drops
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/color-5.svg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Chantix
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/bayer.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Pfizer
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/pills.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Pills
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/220-2200280_canada-merck-connect-logo-merck-inventing-for-life.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Merck
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/Rectangle 2.4.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Drops
-                    </p>
-                </a>
-                <a href="./news-article.html" class="tile tile--small">
-                    <img src="./img/news/chantix.jpg" alt="bayer">
-                    <p class="tile__description line-1">
-                        Chantix
-                    </p>
-                </a>
+                </a> -->
             </div>
 
         </section>
