- updated the API requests for login, company, news, etc.

--- a/app/dialog.html
+++ b/app/dialog.html
@@ -63,7 +63,7 @@
 
 </head>
 
-<body class="home-page dialog-page">
+<body class="home-page dialog-page" id="dialog">
     <!--[Structure] Header START -->
     <header>
         <aside class="navigation__sidebar">
