--- a/app/home.html
+++ b/app/home.html
@@ -192,7 +192,7 @@
                         Progress made on cancer
                     </p>
                 </a>
-                <a href="./companies-pfizer.html" class="tile tile--news js-news-link">
+                <a href="./company.html" class="tile tile--news js-news-link">
                     <img src="./img/news/pfizer.jpg" alt="bayer">
                     <p class="tile__description line-1">
                             Title here with ellipsis if it Lorem ipsum dolor sit.
@@ -275,7 +275,7 @@
                         Pills
                     </p>
                 </a>
-                <a href="./companies-pfizer.html" class="tile tile--small tile--unlim-height">
+                <a href="./company.html" class="tile tile--small tile--unlim-height">
                     <img src="./img/news/pfizer.jpg" alt="bayer">
                     <h3 class="tile__type line-1">Company</h3>
                     <p class="tile__description line-2">
