--- a/app/login.html
+++ b/app/login.html
@@ -63,7 +63,7 @@
 
 </head>
 
-<body class="login-page">
+<body class="login-page" id="login">
     <!--[Structure] Header START -->
     <header>
 
