--- a/app/news-article.html
+++ b/app/news-article.html
@@ -203,7 +203,7 @@
                                     Progress made on cancer
                                 </p>
                             </a>
-                            <a href="./companies-pfizer.html" class="tile tile--news js-news-link">
+                            <a href="./company.html" class="tile tile--news js-news-link">
                                 <img src="./img/news/pfizer.jpg" alt="bayer">
                                 <p class="tile__description line-1">
                                     Pfizer statement on Jury’s
@@ -335,7 +335,6 @@
             var text = document.querySelector('#news .news__text');
             var like = document.querySelector('#news .js-like');
             
-            console.log(newsObject);
             //populate the sections with actual data
             if (newsObject.pic) {pic.src = newsObject.pic;}
             if (newsObject.title) {title.innerHTML = newsObject.title;}
