--- a/app/signup-2.html
+++ b/app/signup-2.html
@@ -63,7 +63,7 @@
 
 </head>
 
-<body class="login-page">
+<body class="login-page" id="signup">
     <!--[Structure] Header START -->
     <header>
  
@@ -97,7 +97,7 @@
     
 
                 <label class="input__wrapper">
-                    <input type="text" name="name" placeholder="Primary taxonomy" class="input" required>
+                    <input type="text" name="taxonomy" placeholder="Primary taxonomy" class="input" required>
                     <span class="input__info fade fade-out">Primary taxonomy</span>
                     <span class="input__error fade fade-out">Primary taxonomy is required</span>
                 </label>
