--- a/app/signup-3.html
+++ b/app/signup-3.html
@@ -63,7 +63,7 @@
 
 </head>
 
-<body class="login-page">
+<body class="login-page" id="signup">
     <!--[Structure] Header START -->
     <header>
 
@@ -78,7 +78,7 @@
             <form action="#" class="signup-form" id="signup-form-step-3">
 
                 <label class="input__wrapper">
-                    <input type="text" name="email" placeholder="Email" class="input" required>
+                    <input type="email" name="email" placeholder="Email" class="input" required>
                     <span class="input__info fade fade-out">Email</span>
                     <span class="input__error fade fade-out">Email is required</span>
                 </label>
