--- a/app/signup-4.html
+++ b/app/signup-4.html
@@ -80,7 +80,7 @@
                     Congratulations
                 </h3>
                 <p class="account-created-block__text">
-                    Your account has been created. Please check your email to confirm and activate your account
+                    Your account has been created. Please check your mailbox to confirm and activate your account
                 </p>
             </div>
         </div>
