--- a/app/companies.html
+++ b/app/companies.html
@@ -180,7 +180,7 @@
             </h2>
 
             <div class="section__content" id="companies-page-container">
-                <!-- <a href="./companies-pfizer.html" class="tile tile--small ">
+                <!-- <a href="./company.html" class="tile tile--small ">
                     <img src="./img/news/bayer.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Pfizer
@@ -202,7 +202,7 @@
             </h2>
 
             <div class="section__content">
-                <a href="./companies-pfizer.html" class="tile tile--small ">
+                <a href="./company.html" class="tile tile--small ">
                     <img src="./img/news/bayer.jpg" alt="bayer">
                     <p class="tile__description line-1">
                         Pfizer
@@ -232,7 +232,7 @@
                         Chantix
                     </p>
                 </a>
-                <a href="./companies-pfizer.html" class="tile tile--small ">
+                <a href="./company.html" class="tile tile--small ">
                     <img src="./img/news/color-1.svg" alt="bayer">
                     <p class="tile__description line-1">
                         Pfizer
@@ -278,7 +278,7 @@
                 <h4 class="recent-searches__title">Recent searches</h4>
                 <ul class="recent-searches__list">
                     <li class="recent-searches__list-item">
-                        <a href="./companies-pfizer.html" class="recent-searches__link" data-search="Pfizer">
+                        <a href="./company.html" class="recent-searches__link" data-search="Pfizer">
                                 Pfizer
                         </a>
                     </li>
